--- a/vault/Cargo.toml
+++ b/vault/Cargo.toml
@@ -6,8 +6,12 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib", "lib"]
 
+[features]
+default = ["native"]
+native = ["solana-program"]
+
 [dependencies]
-solana-program = "2.0.10"
+solana-program = { version = "2.0.10", optional = true }
 
 [dev-dependencies]
 mollusk-svm = { git = "https://github.com/buffalojoec/mollusk.git" }
