--- a/vault/Cargo.toml
+++ b/vault/Cargo.toml
@@ -9,10 +9,15 @@ crate-type = ["cdylib", "lib"]
 [features]
 default = ["native"]
 native = ["solana-program"]
+optimized = ["pinocchio", "solana-nostd-sha256", "five8_const"]
+based = []
 
 [dependencies]
 solana-program = { version = "2.0.10", optional = true }
+pinocchio = { version = "0.6.0", optional = true }
+five8_const = { version = "0.1.3", optional = true }
+solana-nostd-sha256 = { version = "0.1.3", optional = true }
 
 [dev-dependencies]
-mollusk-svm = { git = "https://github.com/buffalojoec/mollusk.git" }
+mollusk-svm = "0.0.6"
 solana-sdk = "2.0.10"
