--- a/escrow/Cargo.toml
+++ b/escrow/Cargo.toml
@@ -3,4 +3,16 @@ name = "escrow"
 version = "0.1.0"
 edition = "2021"
 
+crate-type = ["cdylib", "lib"]
+
 [dependencies]
+solana-nostd-sha256 = "0.1.3"
+pinocchio = { git = "https://github.com/L0STE/pinocchio/", branch = "spl-token" }
+pinocchio-system = { git = "https://github.com/L0STE/pinocchio/", branch = "spl-token" }
+pinocchio-token = { git = "https://github.com/L0STE/pinocchio/", branch = "spl-token" }
+five8_const = "0.1.3"
+
+[dev-dependencies]
+mollusk-svm = "0.0.8"
+solana-sdk = "2.0.10"
+solana-logger = "2.0.10"
