--- a/vault/Cargo.toml
+++ b/vault/Cargo.toml
@@ -21,3 +21,4 @@ solana-nostd-sha256 = { version = "0.1.3", optional = true }
 [dev-dependencies]
 mollusk-svm = "0.0.6"
 solana-sdk = "2.0.10"
+solana-logger = "2.0.10"
