--- a/amm/Cargo.toml
+++ b/amm/Cargo.toml
@@ -4,3 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+solana-nostd-sha256 = "0.1.3"
+pinocchio = "0.6.0"
+pinocchio-system = "0.2.0"
+pinocchio-token = "0.2.0"
+constant-product-curve = { path = "constant-product-curve" }
+five8_const = "0.1.3"
+five8 = "0.2.1"
+
+[dev-dependencies]
+mollusk-svm = { git = "https://github.com/deanmlittle/mollusk" }
+mollusk-token = { git = "https://github.com/deanmlittle/mollusk" }
+solana-sdk = "=2.0.8"
+spl-token = "6.0.0"
